# Eba-projeto-docker-00

./: Dockerfile  projeto-00.ipynb
work/: README.md  docker-compose.yml  projeto-00.ipynb  pyproject.toml
